public/css/layout.css
/*
* Skeleton V1.1
* Copyright 2011, Dave Gamache
* www.getskeleton.com
* Free to use under the MIT license.
* http://www.opensource.org/licenses/mit-license.php
* 8/17/2011
*/

/* Table of Content
==================================================
	#Site Styles
	#Page Styles
	#Media Queries
	#Font-Face */

/* #Site Styles
================================================== */

body{
    color: #fff;
    background: #333;
}


#main{
    color: #fff;
    width: 100%;
    /*background-image: url(/img/blue_back.png);
    background-repeat:repeat-x;*/
    background-image: url(/img/stitch.png);
    background-color: #469bad;
    padding-top: 40px;
}

.headline{
    height: 350px
}


.headline h1{
    font-size: 50px;
    line-height: 1;
    text-shadow: 0 1px 2px rgba(0, 0, 0, .5);
    color: #fff;
    padding-top: 40px;
    position: relative;
    z-index: 1;
}

.headline .lead{
    position: relative;
    font-size: 20px;
    line-height: 27px;
    text-shadow: 0 1px 2px rgba(0, 0, 0, .5);
    z-index: 1;
}

.headline .tree{
    padding-top: 10px;
    height: 340px;
    position: relative;
    top: 0px;
    left: -150px;
    z-index: 0;
}

.headline .buttons{
    text-align: center; 
    padding-top: 20px;
}


.headline .contact-button{
    margin-right:10px
}

.headline .signup-button{
    margin-left:10px
}



#second{
    color: #333;
    width: 100%;
    background-image: url(/img/grid.png);
    padding: 0px 0;
    min-height: 150px;
}

#third{
    color: #333;
    background: #fff;
    width: 100%;
    background-color: #eee;
    padding-top: 15px 0;
    min-height: 150px;
}



#wheat{
    background-image: url(/img/wheat.jpg);
    height: 40px;    
    width: 100%;
}

footer{
      border-top: none;
      margin-top: 0;
}

/* #Page Styles
================================================== */

#main{
    min-height: 200px;
}
.users{
    padding-top: 5px;
    padding-bottom: 15px;
}


.users h6 {
  color: #333;
  font-weight: bold;
  text-align: center;
}


.details{
    padding-bottom: 15px;
    padding-top: 10px;
    
}
.details h6 {
  color: #999;
  font-weight: bold;
  border-bottom: 1px #ddd solid;
  line-height: 26px;
  padding-top: 15px;
  margin-bottom: 10px;  
}

.details .products em{
    font-weight: bold;
    color: #333;
    font-style: normal;
    padding-left: 10px;
}

.details .map{
    border: 1px solid #ccc;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
    padding: 2px;
}

.details .app{
    width: 100%;
    height: 50px;
}

.details .app-img img{
    width: 30px;
}

.details .app-img, .details .app-details{
    float:left;
}

.details .app-details{
    padding-left: 10px;
    width: 85%;
    padding-bottom: 5px;
}

.tree_wrap{
    height: 100%;
}

footer {
    text-align: center;
    padding-bottom: 20px;
}

footer img{
    height: 20px;
    position: relative;
    top: 5px;
}

footer .facebook{
    padding-left: 10px;
}

footer .copy{
    padding-left: 10px;
}




/* #Media Queries
================================================== */

	/* Smaller than standard 960 (devices and browsers) */
	@media only screen and (max-width: 959px) {}

	/* Tablet Portrait size to standard 960 (devices and browsers) */
	@media only screen and (min-width: 768px) and (max-width: 959px) {
        #main .tree{
            left: -190px;
        }
        #main h1{
            font-size: 40px;
            line-height: 1;
            padding-top: 20px;
        }

	}

	/* All Mobile Sizes (devices and browser) */
	@media only screen and (max-width: 767px) {
        #main .tree_wrap{
            display:none;
        }
        
        #main h1{
            font-size: 30px;
            line-height: 1;
            text-align: center;
            padding-top: 20px;
            
        }

        #main .lead{
            font-size: 14px;
            line-height: 16px;
        }
        
    }

	/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
	@media only screen and (min-width: 480px) and (max-width: 767px) {
         #main .tree_wrap{
                display:none;
            }

            #main h1{
                font-size: 34px;
                line-height: 1;
                text-align: center;
                padding-top: 20px;
                
            }

            #main .lead{
                font-size: 16px;
                line-height: 16px;
            }
        
    }

    /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
    @media only screen and (max-width: 479px) {
    }


/* #Font-Face
================================================== */
/* 	This is the proper syntax for an @font-face file
		Just create a "fonts" folder at the root,
		copy your FontName into code below and remove
		comment brackets */

/*	@font-face {
	    font-family: 'FontName';
	    src: url('../fonts/FontName.eot');
	    src: url('../fonts/FontName.eot?iefix') format('eot'),
	         url('../fonts/FontName.woff') format('woff'),
	         url('../fonts/FontName.ttf') format('truetype'),
	         url('../fonts/FontName.svg#webfontZam02nTh') format('svg');
	    font-weight: normal;
	    font-style: normal; }
*/

